@@ -6,9 +6,9 @@ RunInTerminal=true
 ShowLocals=true
 
 [filenumbers]
-0=105
-1=1
-2=35
+0=1
+1=40
+2=9
 3=28
 4=31
 5=310
@@ -46,41 +46,37 @@ ShowLocals=true
 17=
 
 [filelist]
-0=/home/terry/Projects/gnomesword1/src/gnome/dictlex_dialog.c
-1=/home/terry/Projects/gnomesword1/src/gui/dictlex_dialog.h
-2=/home/terry/Projects/gnomesword1/src/gui/dictlex.h
-3=/home/terry/Projects/gnomesword1/src/gnome/dictlex.c
-4=/home/terry/Projects/gnomesword1/src/main/dictlex.c
+0=/home/terry/Projects/gnomesword1/src/gnome/bibletext.c
 
 [replace_text]
-0=html_widget
-1=comm_display
-2=vc->
-3=toolbar
-4=vc->btn_close
-5=vc->html
-6=vc->btn_next
-7=vc->btn_prev
+0=sw_mgr->results
+1=sw_mgr->search
+2=mgr_search
+3=mgr_results
+4=html_widget
+5=comm_display
+6=vc->
+7=toolbar
 
 [find_text]
-0=dictlex_
-1=viewcomm
-2=settings.dictkey
-3=module_new_menu
-4=comm_display
-5=havebible
-6=viewtext
-7=chapter_display
+0=mgr_results
+1=mgr_search
+2=searchMgr
+3=mgr
+4=usr_data
+5=dictlex_
+6=viewcomm
+7=settings.dictkey
 
 [executer args]
 0=newconfigs
 
 [find_in_files]
-0=backend/viewdict.h
-1=backend/viewcomm.h
-2=#include "backend/viewcomm.h"
-3=gui/_gbs.h
-4=gs_shortcutbar.h
-5=create_shortcutbar_viewer.h
-6=preferences_dlg
-7=gs_info_box.h
+0=mainMgr
+1=SWMgr *mainMgr
+2=backend/viewdict.h
+3=backend/viewcomm.h
+4=#include "backend/viewcomm.h"
+5=gui/_gbs.h
+6=gs_shortcutbar.h
+7=create_shortcutbar_viewer.h
